--- a/source/web/src/app/templates/groupPage/tabs/information.jade
+++ b/source/web/src/app/templates/groupPage/tabs/information.jade
@@ -1,7 +1,8 @@
 div(layout="column" layout-align="center center" layout-fill )
     md-content(flex)
+        md-button.md-raised.md-primary(ng-if='groupPage.userIsOwner == 1' ng-click='groupPage.deleteGroup()') Delete group
         md-button.md-raised.md-primary(ng-if='groupPage.userIsIn == 0' ng-click='groupPage.registerUser()') Subscribe
-        md-button.md-raised.md-primary(ng-if='groupPage.userIsIn == 1' ng-click='groupPage.unregisterUser()') Unsubscribe
+        md-button.md-raised.md-primary(ng-if='groupPage.userIsIn == 1 && groupPage.userIsOwner == 0' ng-click='groupPage.unregisterUser()') Unsubscribe
         md-list(flex)
             md-list-item.md-3-line.md-no-proxy
                 .md-list-item-text
