working on like recipes

--- a/source/web/src/app/templates/recipePage/recipePage.jade
+++ b/source/web/src/app/templates/recipePage/recipePage.jade
@@ -1,3 +1,4 @@
-include 
 div(layout="column" layout-fill)
-		include recipedetail.html
+		include ./recipedetail.html
+		md-button(class="md-primary md-fab md-fab-bottom-right" ng-click='addToLikedUserRecipes()')
+			<3
