get user for like ingredient

--- a/source/web/src/app/templates/recipePage/recipePage.jade
+++ b/source/web/src/app/templates/recipePage/recipePage.jade
@@ -1,4 +1,4 @@
 div(layout="column" layout-fill)
 		include ./recipedetail.html
-		md-button(class="md-primary md-fab md-fab-bottom-right" ng-click='addToLikedUserRecipes()')
+		md-button(class="md-primary md-fab md-fab-bottom-right" ng-click='recipePage.addToLikedUserRecipes()')
 			<3
